// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation ElevationFifth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ bxNJxw"
/>
`;

exports[`Elevation ElevationFirst should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ fKGMcQ"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ bwnuEW"
/>
`;

exports[`Elevation ElevationFourth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ rlHCs"
/>
`;

exports[`Elevation ElevationSecond should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ lbkNoQ"
/>
`;

exports[`Elevation ElevationThird should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ jDCUA"
/>
`;
